# coreason_etl_pubmedcentral

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  llms.txt  mkdocs.yml  patch.diff  plan_review_request.txt  pyproject.toml  test_fsspec.py  total_columns  zensical.toml
.dlt/: secrets.toml
.github/workflows/: ci.yml
docs/: index.md
src/coreason_etl_pubmedabstracts/: __init__.py  config.py  main.py
src/coreason_etl_pubmedabstracts/parsers/: __init__.py  xml_parser.py
src/coreason_etl_pubmedabstracts/resources/: __init__.py  baseline.py  updates.py
src/coreason_etl_pubmedabstracts/utils/: __init__.py  ftp_streamer.py
src/coreason_etl_pubmedcentral/: __init__.py  bronze_ingestion.py  config.py  gold_transformation.py  main.py  manifest.py  manifest_parser.py  pipeline_gold.py  pipeline_silver.py  pipeline_source.py  silver_transformation.py  source_manager.py  tarball_processor.py  xml_parser.py
src/coreason_etl_pubmedcentral/models/: contracts.py  manifest_parser.py  manifests.py  tarball_streamer.py  topology.py  xml_parser.py
src/coreason_etl_pubmedcentral/parsers/: __init__.py  jats_parser.py
src/coreason_etl_pubmedcentral/parsing/: __init__.py  parser.py
src/coreason_etl_pubmedcentral/utils/: __init__.py  logger.py  surrogate_key.py
tests/: conftest.py  test_bronze_ingestion.py  test_cli.py  test_complex_combined_cases.py  test_config.py  test_entity_parser.py  test_extended_complexity.py  test_extreme_edge_cases.py  test_frd_edge_cases.py  test_funding_parser.py  test_gold_transformation.py  test_jats_parser.py  test_main.py  test_manifest.py  test_manifest_complex.py  test_manifest_parser.py  test_models.py  test_observability.py  test_parsing.py  test_parsing_namespace.py  test_parsing_robustness.py  test_parsing_strict.py  test_parsing_torture.py  test_pipeline_gold.py  test_pipeline_silver.py  test_pipeline_source.py  test_pipeline_source_validation.py  test_retraction_logic.py  test_silver_transformation.py  test_source_manager.py  test_specific_complex_cases.py  test_surrogate_key.py  test_tarball_processor.py  test_tarball_streamer.py  test_temporal_parser.py  test_temporal_parser_coverage.py  test_temporal_parser_no_pub_type.py  test_utils.py  test_xml_parser.py
tests/data/: jats_authors_edge_cases.xml  jats_authors_sample.xml  jats_complex_sample.xml  jats_content_sample.xml  jats_coverage.xml  jats_dates_sample.xml  jats_edge_cases.xml  jats_funding_complex.xml  jats_funding_sample.xml  jats_identity_sample.xml  jats_legacy.xml  jats_modern.xml  jats_namespace.xml  jats_no_type.xml  jats_winter.xml  jats_wrapper.xml
tests/integration/: test_live_pipeline.py
tests/test_coreason_etl_pubmedabstracts/: test_abstracts_config.py  test_abstracts_main.py  test_abstracts_xml_parser.py  test_baseline_resource.py  test_updates_resource.py
