[tool.poetry]
name = "coreason_etl_pubmedcentral"
version = "0.1.0"
description = "ETL pipeline for PubMed Central (PMC)"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_etl_pubmedcentral", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
lxml = "^6.0.2"
dlt = {extras = ["duckdb"], version = "^1.20.0"}
fsspec = "^2025.12.0"
s3fs = "^2025.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
types-lxml = "^2025.11.25"
types-boto3 = "^1.42.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_etl_pubmedcentral"
version = "0.1.0"
description = "ETL pipeline for PubMed Central (PMC)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_etl_pubmedcentral"
Repository = "https://github.com/CoReason-AI/coreason_etl_pubmedcentral"
Documentation = "https://github.com/CoReason-AI/coreason_etl_pubmedcentral"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["coreason_etl_pubmedcentral"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (select with '-m integration')",
]

[tool.coverage.run]
omit = ["tests/*"]
