[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_etl_pubmedcentral"
dynamic = ["version"]
description = "ETL process for extracting medical literature from PubMed Central (PMC)"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Akshaya M", email = "akshaya.movvar@coreason.ai" },
]
dependencies = [
    "dlt>=1.20.0",
    "fsspec>=2026.2.0",
    "loguru>=0.7.2",
    "lxml>=6.0.2",
    "polars>=1.39.0",
    "pydantic>=2.12.5",
    "tenacity>=9.1.4",
]

license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.scripts]
pmc-etl = "coreason_etl_pubmedcentral.main:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1",
    "lxml-stubs>=0.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_etl_pubmedcentral"]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_etl_pubmedcentral"
Repository = "https://github.com/CoReason-AI/coreason_etl_pubmedcentral"
Documentation = "https://github.com/CoReason-AI/coreason_etl_pubmedcentral"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-n auto --cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.deptry.per_rule_ignores]
DEP002 = ["dlt", "fsspec", "lxml", "polars", "pydantic", "tenacity"]
